Add lazy effect and fix misspelled discipline name
